Fix button ID case from 'Calculate' to 'calculate'

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </style>
 
 <div style="text-align: center;">
-    <button class="calc-btn" id="Calculate">Calculate</button>
+    <button class="calc-btn" id="calculate">Calculate</button>
 </div>
 
 <p id="answer"></p>
